[package]
name = "conv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0.1"
cpal = "0.13.5"
wav = "1.0.0"
float-cmp = "0.9.0"
serde_json = "1.0.81"
rustc-serialize = "0.3"
clap = { version = "3.0", features = ["derive"] }
regex = "1.1.8"